Fixed indentation on left nav and text on homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@
 			
 			<div class="row">
 				<div class="col-lg-12 pb-top-text">
-					<h1>Header Bidding Unwrapped</h1>
+					<h1>Header bidding unwrapped</h1>
 					<h2>Earn more from your advertising with Prebid, a transparent, open-source solution that increases advertiser demand while maintaining a fast and responsive user experience.</h2>
         		</div>
 			</div>
@@ -55,7 +55,7 @@
 				<!--start benefits-->
 				<div class="pb_benefits">
 					
-					<div class="pb-benefits-title"><h2>The Benefits Of Using Prebid</h2></div>
+					<div class="pb-benefits-title"><h2>The Benefits of Using Prebid</h2></div>
 					
 					<div class="pb-benefits-container">
 						<div class="pb-benefits-row">
