Fixed left nav showing urls

--- a/_layouts/page_v2.html
+++ b/_layouts/page_v2.html
@@ -61,7 +61,7 @@
 				            				{% if isPage == 1 %}
 											<span class="menu-collapsed pb-nav-item" style="background-color:#cccccc;">{{sectionItem.title}}</span>
 											{% else %}
-											<span class="menu-collapsed pb-nav-item">{{sectionItem.title}}{{page.url}}</span>
+											<span class="menu-collapsed pb-nav-item">{{sectionItem.title}}</span>
 											{% endif %}
 		                				</a>
 		                				
