--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,21 +2,13 @@
 
 {% include nav.html %}
 
-<!--
-<div class="bs-docs-header" id="content">
-    <div class="container">
-        <h1>Prebid.org Blog</h1>
-        <p>A collection of helpful tips for implementing header bidding with.</p>
-    </div>
-</div>
--->
-
-
-
 <div class="container bs-docs-container">
     <div class="row">
         <div class="col-md-9 pb-blog" role="main">
             <div class="bs-docs-section ">
+		<div class="blog-date">
+                   <h4>{{ page.date | date: '%B %d, %Y' }}</h4>
+        	</div>
                 <h2>{{page.title}}</h2> 
                 {{content}}
 
